[gd_scene load_steps=4 format=3 uid="uid://ck6smt7oulkc"]

[ext_resource type="Script" uid="uid://blign5pet4tmj" path="res://demo/demo.gd" id="1_dar0o"]
[ext_resource type="PackedScene" uid="uid://vbahjmxesqjd" path="res://demo/demo_map.tscn" id="3_dar0o"]
[ext_resource type="PackedScene" uid="uid://1d33ako3c375" path="res://player/player.tscn" id="4_j5lb4"]

[node name="DemoMap" type="Node3D"]
script = ExtResource("1_dar0o")
player_scene = ExtResource("4_j5lb4")

[node name="Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="Host" type="Button" parent="Menu"]
layout_mode = 0
offset_left = 450.0
offset_top = 192.0
offset_right = 695.0
offset_bottom = 264.0
text = "Host"

[node name="Join" type="Button" parent="Menu"]
layout_mode = 0
offset_left = 448.0
offset_top = 287.0
offset_right = 695.0
offset_bottom = 362.0
disabled = true
text = "Join"

[node name="Prompt" type="LineEdit" parent="Menu"]
layout_mode = 0
offset_left = 435.0
offset_top = 395.0
offset_right = 714.0
offset_bottom = 435.0
placeholder_text = "Lobby ID"

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://1d33ako3c375")
spawn_path = NodePath("..")

[node name="Pause" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Exit" type="Button" parent="Pause"]
layout_mode = 0
offset_left = 22.0
offset_top = 26.0
offset_right = 100.0
offset_bottom = 79.0
text = "Exit"

[node name="Copy" type="Button" parent="Pause"]
layout_mode = 0
offset_left = 23.0
offset_top = 99.0
offset_right = 102.0
offset_bottom = 149.0
text = "Copy"

[node name="ID" type="Label" parent="Pause"]
layout_mode = 0
offset_left = 26.0
offset_top = 169.0
offset_right = 307.0
offset_bottom = 197.0

[node name="DemoMap" parent="." instance=ExtResource("3_dar0o")]

[connection signal="pressed" from="Menu/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Menu/Join" to="." method="_on_join_pressed"]
[connection signal="text_changed" from="Menu/Prompt" to="." method="_on_prompt_text_changed"]
[connection signal="pressed" from="Pause/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Pause/Copy" to="." method="_on_copy_pressed"]
